# AdventOfCode2024

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pch.h
day1/: solution.cpp
day2/: input2.txt  sol.py  solution.cpp
day3/: solution.cpp
day4/: solution.cpp
src/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day3.cpp  day4.cpp  day5.cpp  day8.cpp  day9.cpp  main.cpp  utils.cpp  utils.hpp
